TEST_PROGRAMS/INVALID/15/semicolon1.go
package main;

func normal_go_program(a int) {
   return normal_go_program(a
);
}
